test/errors/error38.vult
enum x {
  A
}

enum y {
  A
}
